--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civ 7 Spinner</title>
+    <title>Civilization 7 Leader Wheel</title>
     <style>
         body {
             display: flex;
