--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            font-family: Helvetica, sans-serif;
+            font-family: Arial, sans-serif;
         }
         canvas {
             background: white;
