--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civilization 7 Leader Wheel</title>
+    <title>Civ 7 Leader Wheel</title>
     <style>
         body {
             display: flex;
@@ -13,7 +13,7 @@
             min-height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            font-family: Helvetica, sans-serif;
         }
         canvas {
             background: white;
@@ -38,6 +38,6 @@
 <body>
     <canvas id="wheelCanvas" width="800" height="800"></canvas>
     <button id="spinButton">SPIN!</button>
-    <script src="spinner.js"></script>
+    <script src="spinner.js?v=2"></script>
 </body>
 </html>
